# wglad

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  exec_win32.cpp
examples/findmodule/: CMakeLists.txt  main.cpp
glad/: glad.c  glad.h
include/wglad/: wglad.cpp  wglad.h
lib/: wglad.lib
module/: Findwglad.cmake  wglad-config.cmake.in  wglad-download.cmake  wglad-package.cmake
srcs/wglad/: glad.c  wglad.cpp
wglad/: CMakeLists.txt
